# NeuralVoid

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  setup.py
prototyping/: hello.ipynb
src/neuralvoid/: main.py
src/neuralvoid/cli/: arg_parser.py  headless_agent.py
src/neuralvoid/core/: headless_agent.py
src/neuralvoid/tools/: agentic.py  file_set.py  terminal_set.py
src/neuralvoid/ui/: chat.py  helpers.py  rendering.py
src/neuralvoid/workflows/: default_flow.py
