[project]
name = "neuralvoid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "neuralcore @ git+https://github.com/Abyss-c0re/NeuralCore.git",
    "textual>=0.81.1",
]

[tool.pyright]  
venvPath = "."     
venv = ".venv"

[project.scripts]
neuralvoid = "neuralvoid.main:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0", "toml>=0.10.2"]
build-backend = "uv_build"


